# VSCodeMemoryManager

./: README.md
CPP/: CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.h  README.md  VSPtr.h  encriptado.cpp  main.cpp  md5.cpp  output.cpp
MemoryManager/src/: extension.ts
VSCodeExtension/: CHANGELOG.md  JACKSON0.json  JACKSON1.json  JACKSON10.json  JACKSON11.json  JACKSON12.json  JACKSON13.json  JACKSON14.json  JACKSON15.json  JACKSON16.json  JACKSON18.json  JACKSON19.json  JACKSON2.json  JACKSON3.json  JACKSON4.json  JACKSON5.json  JACKSON6.json  JACKSON7.json  JACKSON8.json  JACKSON9.json  README.md  genJSON.js  package-lock.json  package.json
VSCodeExtension/src/: extension.ts
